[package]
name = "awc-ws-test"
version = "0.1.0"
authors = ["Michael van Niekerk <mvniekerk@chazaqdev.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-rt = { version = '2', features = ["default", "macros"] }
actix = '0.11.0-beta.3'
actix-codec = '0.4.0-beta.1'
actix-web = { version = '4.0.0-beta.4', features = ["openssl"] }
actix-web-actors = "4.0.0-beta.3"
actix-files = "0.6.0-beta.3"
awc = { version = "3.0.0-beta.3", features = ["default", "openssl"] }
tokio = { version = "1", features=["full"]}
openssl = "0.10"
bytes = "1"
bytestring = "1"
futures = "0.3"
